<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo3"
        android:text="@string/viewSlogan" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_team"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:fontFamily="@font/nabila"
            android:gravity="center"
            android:text="@string/team"
            android:textSize="20dp"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/txt_thanks"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:gravity="center"
            android:fontFamily="@font/nabila"
            android:text="@string/thanks"
            android:textSize="20dp"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    </LinearLayout>




</LinearLayout>
